@@ -17,6 +17,10 @@ BEGIN {
     print "1..0 # Skip: EBCDIC\n";
     exit 0;
     }
+    if ("$]" >= 5.025) {
+    print "1..0 # encoding pragma not supported in Perl 5.26\n";
+    exit(0);
+    }
     $| = 1;
 }
 
